# news-graph-project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements.txt  test.py  test_full_integration.py  test_simple.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  manual-deploy.yml
config/: schedule_config.yaml
database/: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pg_hba.conf  postgresql.conf
database/scripts/: risk_scores_table.sql  telegram_subscribers_table.sql
database/scripts/maintenance/: reset_sequences.sql  wipe_entity_aliases.sql  wipe_ner_tables.sql
database/scripts/seed/: sources_insert.sql
database/scripts/tables/: entities_table.sql  entity_aliases_table.sql  processed_articles_table.sql  sources_table.sql  watchlists_table.sql
docs/: adding_new_source.md  architecture.md  timezone_handling.md
scripts/: article_entities_table.sql  check_db_timezone.py  demo_parsers.py  entities_table.sql  entity_aliases_data.py  llm_entity_cleanup.py  merge_entity_aliases.py  migrate_entity_aliases.py  ner_benchmark.py  nlp_worker.py  processed_articles_table.sql  raw_articles_table.sql  run_historical_ner.py  run_historical_parser.py  run_parser.py  sources_insert.sql  summarizations_table.sql
scripts/legacy/: entity_aliases_data.py  llm_entity_cleanup.py  merge_entity_aliases.py  migrate_entity_aliases.py  ner_diagnostic.py
services/: healthcheck.py
services/bot/: Dockerfile  app.py  requirements.txt
services/ner/: Dockerfile  app.py  requirements.txt
services/parser/: Dockerfile  app.py  requirements.txt
services/summarizer/: Dockerfile  app.py  requirements.txt
src/: main.py
src/app/: entity_cleanup.py  ner_processor.py  parse_source.py  scheduler.py  summarizer.py
src/application/cli/: commands.py
src/application/use_cases/: parse_source.py
src/config/: database.py  schedules.py  settings.py
src/core/: constants.py  exceptions.py  models.py  schemas.py
src/database/: pool.py
src/database/repositories/: article_entity_repository.py  article_repository.py  entity_repository.py  processed_article_repository.py  summary_repository.py
src/parsers/: base.py  converter_factory.py  factory.py
src/utils/: data.py  datetime_utils.py  logging.py  retry.py  telegram_helpers.py
tests/: conftest.py  llm_con_test.py  test_db_connections.py  test_full_integration.py
tests/integration/: conftest.py  test_database_real.py  test_full_e2e.py  test_ner_llm_smoke.py  test_parse_source_flow.py  test_parsers_real.py  test_repositories_real.py
tests/unit/: test_article_repository.py  test_bot.py  test_datetime_utils.py  test_datetime_utils_extended.py  test_formatter.py  test_logging.py  test_models.py  test_parsers_factory.py  test_repositories.py  test_retry.py  test_statistics.py  test_summary_repository.py
(+61 files in other folders)
